2012-10-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c:  Suppress drawing of a degenerate keybox when
	"set key box" but no plot titles. Bugfix.

2012-10-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotWidget.cpp (exportToSvg):
	Restrict svg output size to scaled viewport.  This gets rid of the
	oversize border around a plot exported from the qt terminal to svg.
	Empirical fix, results not guaranteed!
	Bug #3573897

2012-10-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c src/unset.c src/term_api.h:
	Consistent with the documented generic meaning of "unset", the command
	"unset terminal" now restores the default terminal present at program
	entry.  I.e., it is equivalent to "set terminal GNUTERM".

2012-09-30  Tag Release_4_6_1

2012-09-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Fix bug preventing explicit assignment of color
	sequence in stacked histograms.

	* src/datafile.c src/util.c (streq) src/util.h:  New utility function
	streq(char *a, char *b) returns TRUE if a and b are identical save for
	leading and trailing whitespace.  Use this for matching requested string
	labels in a using spec to the actual column header text in a data file.
	Bug #3571243

	* src/axis.c src/axis.h src/mouse.c src/plot2d.c src/util.c:
	Allow zooming of plots that originally had an explicit range in the
	plot command.

2012-09-22  Ethan A Merritt  <merritt@u.washington.edu>

	* lisp/configure.in docs/Makefile.in:
	Backport emacs+info build configuration from 4.7

2012-09-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: valgrind found a code path in which the key placement
	was never initialized.

2012-09-18  Ethan A Merritt  <merritt@u.washington.edu>

	* lisp/gnuplot.el: elisp is now getting serious about a syntax change
	announced 10+ years ago.   s/(` (/`(/

	* lisp/configure.in lisp/Makefile.am:  The autoconfigure scripting for